...
    <string name="chevron">&gt;</string>
    <string name="listicon">o</string>
    <string name="reorder">=</string>
    <string name="stopStatus">!</string>

    <!-- Activity Titles -->
    <string name="login">Login</string>
    <string name="newcustomerinfo">New Customer Info</string>
    <string name="routeList">Routes</string>
    <string name="distributionList">Distribution Centers</string>
    <string name="regionList">Regions</string>
    <string name="selectstop">Location List</string>
    <string name="selectinvoice">Delivery Stop</string>
...
    <string name="signature">Signature</string>
    <string name="signatureName">Signature Name</string>
    <string name="titleRoute">Delivery Stops</string>

    <!-- Text Labels -->
    <string name="loginLabel">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="notACustomerLabel"><u>Not a Customer?</u></string>
    <string name="customerLabel">Customer</string>
    <string name="locationLabel">Location</string>
    <string name="nameLabel">Name</string>
    <string name="truckListEmptyLabel">No routes found.\n\nPlease select \'Refresh\' from the pop-up menu to reload the route list.</string>
    <string name="acceptLabel">Accept</string>
    <string name="acceptAllLabel">Accept All</string>
    <string name="of">of</string>
    <string name="signedByLabel">Signed By:</string>
    <string name="deliveredLabel">Delivered:</string>
    <string name="returnLabel">Accept Pickup</string>
    <string name="searchLabel">Search</string>
    <string name="searchActive">Searching…</string>
    <string name="searchRoutesLabel">Filter List</string>
    <string name="deleteItemLabel">Remove</string>
    <string name="addItemLabel">Add Item</string>
    <string name="doneLabel">Done</string>
    <string name="mapLabel">Map</string>
    <string name="noteLabel">Note</string>
    <string name="photoLabel">Photo</string>
    <string name="deliveryLabel">Delivery #: </string>
    <string name="addNoteLabel">Add Note</string>
    <string name="itemDetailLabel">Product</string>
...
    <string name="completedTabLabel">Completed</string>
    <string name="notSyncedTabLabel">Not Synced</string>

    <!-- Menu Item Labels -->
    <string name="settings">Settings</string>
    <string name="refreshTruckList">Refresh</string>
    <string name="scan">Scan</string>
    <string name="partial_enable">Enable Partial</string>
    <string name="partial_disable">Disable Partial</string>
    <string name="reorder_item">Reorder</string>
    <string name="syncNow">Sync Now</string>
    <string name="changeTrucks">Exit Route</string>
    <string name="logout">Logout</string>
...
    <string name="feedback">Feedback</string>
    <string name="feedbackSend">Send Feedback</string>
    <string name="support">Support</string>
    <string name="aboutApp">About this app</string>
    <string name="scannerType">Scanner Type</string>
    <string name="returns">Pickups</string>
    <string name="takeReturn">Unscheduled Pickup</string>
    <string name="takeDelivery">Unscheduled Delivery</string>

    <!-- Scan -->
    <string name="menu_scanner_type">Scanner Type</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_exit_route">Exit Route</string>
    <string name="btScan">Bluetooth Scanner</string>
...
    <string name="fetchRouteNoWait">Retrieving Route…</string>
    <string name="fetchRouteWait">Optimizing Route…</string>
    <string name="great">Great</string>
    <string name="loggedIn">Logged In</string>
    <string name="networkConnection">Network Connection</string>
    <string name="onoff">On/Off</string>
    <string name="save">Save</string>
    <string name="serverConnection">Server Connection</string>
    <string name="socketMobile">Socket Mobile</string>
    <string name="companyName">Company Name</string>
    <string name="acceptDelivery">Accept Delivery</string>
    <string name="partialReasonLabel">Partial Reason</string>
    <string name="submitServer">Syncing with server.</string>
    <string name="tracking">Tracking Location</string>
    <string name="userOverride">Route is currently active and being used by another. If you continue you will kick them out of the route. Would you like to continue?</string>
    <string name="pickupDetail">Pickup</string>
    <string name="pickups">Pickups</string>
...
