...
            android:layout_below="@+id/txtPhotoInfo"
            android:drawableStart="@drawable/note_icon"
            android:drawableLeft="@drawable/note_icon"
            android:drawablePadding="8dp" />

        <RelativeLayout
            android:id="@+id/signingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/driverNote"
            android:layout_marginTop="@dimen/margin_between_buttons">

            <ImageButton
                android:id="@+id/camButton"
                android:elevation="1dp"
                android:src="@drawable/camera_icon"
                style="@style/imageButtonStyle" />

            <ImageButton
                android:id="@+id/noteButton"
                android:layout_toEndOf="@+id/camButton"
                android:layout_toRightOf="@+id/camButton"
                android:elevation="1dp"
                android:src="@drawable/note_icon"
                style="@style/imageButtonStyle" />

            <Button
                android:id="@+id/acceptButton"
                style="@style/primaryButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
...
                    android:visibility="gone" />
            </HorizontalScrollView>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/editLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signatureLayout"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:visibility="gone">
...
                android:layout_marginEnd="10dip"
                android:layout_marginRight="10dip"
                android:text="@string/discard"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnAddline"
                style="@style/tertiaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addItemLabel"
                android:textAllCaps="false" />
        </LinearLayout>
...
