...
            android:text="@string/companyName" />
    </LinearLayout>
    
    <include layout="@layout/rowseparator"/>

    <EditText
        android:id="@+id/enterReturnSKU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enterReturnHint"
        android:inputType="textNoSuggestions"
        android:maxLength="20" />

    <Button
        android:id="@+id/searchReturnButton"
        style="@style/primaryButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/searchLabel"
        android:textAllCaps="false" />
...
